--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2.3\n",
+      "{\n",
+      "  \"Compilers\": {\n",
+      "    \"c\": {\n",
+      "      \"name\": \"msvc\",\n",
+      "      \"linker\": \"link\",\n",
+      "      \"version\": \"19.29.30158\",\n",
+      "      \"commands\": \"cl\"\n",
+      "    },\n",
+      "    \"cython\": {\n",
+      "      \"name\": \"cython\",\n",
+      "      \"linker\": \"cython\",\n",
+      "      \"version\": \"3.0.12\",\n",
+      "      \"commands\": \"cython\"\n",
+      "    },\n",
+      "    \"c++\": {\n",
+      "      \"name\": \"msvc\",\n",
+      "      \"linker\": \"link\",\n",
+      "      \"version\": \"19.29.30158\",\n",
+      "      \"commands\": \"cl\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Machine Information\": {\n",
+      "    \"host\": {\n",
+      "      \"cpu\": \"x86_64\",\n",
+      "      \"family\": \"x86_64\",\n",
+      "      \"endian\": \"little\",\n",
+      "      \"system\": \"windows\"\n",
+      "    },\n",
+      "    \"build\": {\n",
+      "      \"cpu\": \"x86_64\",\n",
+      "      \"family\": \"x86_64\",\n",
+      "      \"endian\": \"little\",\n",
+      "      \"system\": \"windows\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Build Dependencies\": {\n",
+      "    \"blas\": {\n",
+      "      \"name\": \"scipy-openblas\",\n",
+      "      \"found\": true,\n",
+      "      \"version\": \"0.3.28\",\n",
+      "      \"detection method\": \"pkgconfig\",\n",
+      "      \"include directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\",\n",
+      "      \"lib directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\",\n",
+      "      \"openblas configuration\": \"OpenBLAS 0.3.28  USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell MAX_THREADS=24\",\n",
+      "      \"pc file directory\": \"D:/a/numpy/numpy/.openblas\"\n",
+      "    },\n",
+      "    \"lapack\": {\n",
+      "      \"name\": \"scipy-openblas\",\n",
+      "      \"found\": true,\n",
+      "      \"version\": \"0.3.28\",\n",
+      "      \"detection method\": \"pkgconfig\",\n",
+      "      \"include directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\",\n",
+      "      \"lib directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\",\n",
+      "      \"openblas configuration\": \"OpenBLAS 0.3.28  USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell MAX_THREADS=24\",\n",
+      "      \"pc file directory\": \"D:/a/numpy/numpy/.openblas\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Python Information\": {\n",
+      "    \"path\": \"C:\\\\Users\\\\runneradmin\\\\AppData\\\\Local\\\\Temp\\\\build-env-k51dk6fd\\\\Scripts\\\\python.exe\",\n",
+      "    \"version\": \"3.11\"\n",
+      "  },\n",
+      "  \"SIMD Extensions\": {\n",
+      "    \"baseline\": [\n",
+      "      \"SSE\",\n",
+      "      \"SSE2\",\n",
+      "      \"SSE3\"\n",
+      "    ],\n",
+      "    \"found\": [\n",
+      "      \"SSSE3\",\n",
+      "      \"SSE41\",\n",
+      "      \"POPCNT\",\n",
+      "      \"SSE42\",\n",
+      "      \"AVX\",\n",
+      "      \"F16C\",\n",
+      "      \"FMA3\",\n",
+      "      \"AVX2\"\n",
+      "    ],\n",
+      "    \"not found\": [\n",
+      "      \"AVX512F\",\n",
+      "      \"AVX512CD\",\n",
+      "      \"AVX512_SKX\",\n",
+      "      \"AVX512_CLX\",\n",
+      "      \"AVX512_CNL\",\n",
+      "      \"AVX512_ICL\"\n",
+      "    ]\n",
+      "  }\n",
+      "}\n",
+      "None\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Lenovo\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\numpy\\__config__.py:155: UserWarning: Install `pyyaml` for better output\n",
+      "  warnings.warn(\"Install `pyyaml` for better output\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(np.__version__)\n",
+    "\n",
+    "\n",
+    "print(np.show_config())\n"
    ]
   },
   {
@@ -51,11 +160,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.random((2, 3,5))"
    ]
   },
   {
@@ -68,11 +178,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.54776334, 0.53207097, 0.39265895, 0.06818047, 0.034017  ],\n",
+       "        [0.14307153, 0.67243983, 0.13472981, 0.6064509 , 0.85756736],\n",
+       "        [0.89801329, 0.88129011, 0.41070076, 0.09781839, 0.81759086]],\n",
+       "\n",
+       "       [[0.3338339 , 0.38645456, 0.13888304, 0.34026389, 0.32002999],\n",
+       "        [0.2486071 , 0.77103116, 0.69568309, 0.71760188, 0.54461973],\n",
+       "        [0.01406888, 0.66332998, 0.11981287, 0.51870882, 0.57249528]]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "a"
    ]
   },
   {
@@ -85,11 +212,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.random.random((5,2, 3))"
    ]
   },
   {
@@ -102,11 +230,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.38222564, 0.09588583, 0.8512544 ],\n",
+       "        [0.39405671, 0.37555512, 0.75932659]],\n",
+       "\n",
+       "       [[0.0428931 , 0.30582191, 0.39512301],\n",
+       "        [0.40088414, 0.80590537, 0.92306833]],\n",
+       "\n",
+       "       [[0.06791161, 0.37526467, 0.54016434],\n",
+       "        [0.56093943, 0.93452972, 0.5030781 ]],\n",
+       "\n",
+       "       [[0.89133246, 0.89650803, 0.25311548],\n",
+       "        [0.24606182, 0.07629307, 0.57761429]],\n",
+       "\n",
+       "       [[0.88511945, 0.30694504, 0.75723279],\n",
+       "        [0.43707199, 0.78721616, 0.32579167]]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b"
    ]
   },
   {
@@ -119,11 +272,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the are the sam\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "if a.size==b.size:\n",
+    "    print('the are the sam')\n",
+    "else:\n",
+    "    print('the are not the sam')"
    ]
   },
   {
@@ -136,11 +302,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[60], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### [your code here]\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m add_arry\u001b[38;5;241m=\u001b[39m\u001b[43ma\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mb\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "add_arry=a+b"
    ]
   },
   {
@@ -154,11 +334,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c=np.transpose(b,(1,2,0))"
    ]
   },
   {
@@ -171,11 +352,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1.15898157, 1.15881595, 1.89064598, 0.71877174, 1.76054453],\n",
+       "        [1.31122703, 1.07580822, 1.03526665, 0.76313833, 1.38944818],\n",
+       "        [0.56931449, 1.47826811, 0.99650863, 1.05011874, 0.71502221]],\n",
+       "\n",
+       "       [[0.64616515, 0.97416275, 0.53981586, 0.51290629, 1.23383201],\n",
+       "        [1.85614803, 0.92445662, 1.00511623, 0.96377511, 0.47682757],\n",
+       "        [0.93089754, 0.64631468, 1.12258521, 1.21148172, 0.91418911]]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d==a+c\n",
+    "d"
    ]
   },
   {
@@ -188,12 +388,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1.15898157, 1.15881595, 1.89064598, 0.71877174, 1.76054453],\n",
+       "        [1.31122703, 1.07580822, 1.03526665, 0.76313833, 1.38944818],\n",
+       "        [0.56931449, 1.47826811, 0.99650863, 1.05011874, 0.71502221]],\n",
+       "\n",
+       "       [[0.64616515, 0.97416275, 0.53981586, 0.51290629, 1.23383201],\n",
+       "        [1.85614803, 0.92445662, 1.00511623, 0.96377511, 0.47682757],\n",
+       "        [0.93089754, 0.64631468, 1.12258521, 1.21148172, 0.91418911]]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "a\n",
+    "d\n"
    ]
   },
   {
@@ -206,11 +424,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.48694902, 0.81265457, 0.9865151 , 0.77652536, 0.94917974],\n",
+       "        [0.56195284, 0.8117554 , 0.53626733, 0.66807706, 0.76135087],\n",
+       "        [0.6202604 , 0.47924103, 0.85585284, 0.61418857, 0.06064827]],\n",
+       "\n",
+       "       [[0.91962256, 0.97870423, 0.15154732, 0.18395982, 0.80128677],\n",
+       "        [0.94425522, 0.84512469, 0.99912904, 0.98618749, 0.42095303],\n",
+       "        [0.63230189, 0.93403842, 0.97768105, 0.84273302, 0.1839896 ]]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e=a**c\n",
+    "e"
    ]
   },
   {
@@ -224,12 +461,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e is not equal to a\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "\n",
+    "if np.array_equal(a, e):\n",
+    "    print(\"e is equal to a\")\n",
+    "else:\n",
+    "    print(\"e is not equal to a\")"
    ]
   },
   {
@@ -243,12 +493,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d_max: 1.8906459828412798\n",
+      "d_min: 0.4768275746862455\n",
+      "d_mean: 1.0343518082922787\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "\n",
+    "print(\"d_max:\", d_max)\n",
+    "print(\"d_min:\", d_min)\n",
+    "print(\"d_mean:\", d_mean)"
    ]
   },
   {
@@ -261,11 +528,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array f (empty):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.48694902, 0.81265457, 0.9865151 , 0.77652536, 0.94917974],\n",
+       "        [0.56195284, 0.8117554 , 0.53626733, 0.66807706, 0.76135087],\n",
+       "        [0.6202604 , 0.47924103, 0.85585284, 0.61418857, 0.06064827]],\n",
+       "\n",
+       "       [[0.91962256, 0.97870423, 0.15154732, 0.18395982, 0.80128677],\n",
+       "        [0.94425522, 0.84512469, 0.99912904, 0.98618749, 0.42095303],\n",
+       "        [0.63230189, 0.93403842, 0.97768105, 0.84273302, 0.1839896 ]]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "f = np.empty(d.shape)\n",
+    "\n",
+    "print(\"Array f (empty):\")\n",
+    "f"
    ]
   },
   {
@@ -287,11 +583,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "for index, value in np.ndenumerate(d):\n",
+    "    if value == d_min:\n",
+    "        f[index] = 0\n",
+    "    elif value == d_max:\n",
+    "        f[index] = 100\n",
+    "    elif value == d_mean:\n",
+    "        f[index] = 50\n",
+    "    elif d_min < value < d_mean:\n",
+    "        f[index] = 25\n",
+    "    elif d_mean < value < d_max:\n",
+    "        f[index] = 75\n",
+    "\n"
    ]
   },
   {
@@ -325,11 +634,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array d : [[[1.15898157 1.15881595 1.89064598 0.71877174 1.76054453]\n",
+      "  [1.31122703 1.07580822 1.03526665 0.76313833 1.38944818]\n",
+      "  [0.56931449 1.47826811 0.99650863 1.05011874 0.71502221]]\n",
+      "\n",
+      " [[0.64616515 0.97416275 0.53981586 0.51290629 1.23383201]\n",
+      "  [1.85614803 0.92445662 1.00511623 0.96377511 0.47682757]\n",
+      "  [0.93089754 0.64631468 1.12258521 1.21148172 0.91418911]]]\n",
+      "Array f : [[[ 75.  75. 100.  25.  75.]\n",
+      "  [ 75.  75.  75.  25.  75.]\n",
+      "  [ 25.  75.  25.  75.  25.]]\n",
+      "\n",
+      " [[ 25.  25.  25.  25.  75.]\n",
+      "  [ 75.  25.  25.  25.   0.]\n",
+      "  [ 25.  25.  75.  75.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(\"Array d :\",d)\n",
+    "\n",
+    "print(\"Array f :\", f)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -350,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
