--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +132,14 @@
       "}\n",
       "None\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\amjad\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\numpy\\__config__.py:155: UserWarning: Install `pyyaml` for better output\n",
+      "  warnings.warn(\"Install `pyyaml` for better output\", stacklevel=1)\n"
+     ]
     }
    ],
    "source": [
@@ -151,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,20 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.28883863 0.65662772 0.39839219 0.79909239 0.17290952]\n",
-      "  [0.67344714 0.86714866 0.34189354 0.52162888 0.29716684]\n",
-      "  [0.59825453 0.80869038 0.18134915 0.92014898 0.46827587]]\n",
+      "[[[0.65723327 0.74414039 0.50960483 0.90453122 0.84228592]\n",
+      "  [0.5317978  0.62920158 0.74419122 0.62047029 0.03966936]\n",
+      "  [0.60385547 0.75653812 0.50167664 0.82979795 0.00649453]]\n",
       "\n",
-      " [[0.56661524 0.02949106 0.11699283 0.81892342 0.71045186]\n",
-      "  [0.59727728 0.55471504 0.84102424 0.66215483 0.39429196]\n",
-      "  [0.73550306 0.56388317 0.35458813 0.05344871 0.22542744]]]\n"
+      " [[0.88569141 0.99555097 0.834836   0.99719038 0.71190246]\n",
+      "  [0.89082835 0.4312754  0.84383002 0.39536848 0.2648642 ]\n",
+      "  [0.14249626 0.33701881 0.67382261 0.12882944 0.19614096]]]\n"
      ]
     }
    ],
@@ -201,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,27 +361,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.28883863 0.65662772 0.39839219 0.79909239 0.17290952]\n",
-      "  [0.67344714 0.86714866 0.34189354 0.52162888 0.29716684]\n",
-      "  [0.59825453 0.80869038 0.18134915 0.92014898 0.46827587]]\n",
+      "[[[0.65723327 0.74414039 0.50960483 0.90453122 0.84228592]\n",
+      "  [0.5317978  0.62920158 0.74419122 0.62047029 0.03966936]\n",
+      "  [0.60385547 0.75653812 0.50167664 0.82979795 0.00649453]]\n",
       "\n",
-      " [[0.56661524 0.02949106 0.11699283 0.81892342 0.71045186]\n",
-      "  [0.59727728 0.55471504 0.84102424 0.66215483 0.39429196]\n",
-      "  [0.73550306 0.56388317 0.35458813 0.05344871 0.22542744]]]\n",
-      "[[[1.28883863 1.65662772 1.39839219 1.79909239 1.17290952]\n",
-      "  [1.67344714 1.86714866 1.34189354 1.52162888 1.29716684]\n",
-      "  [1.59825453 1.80869038 1.18134915 1.92014898 1.46827587]]\n",
+      " [[0.88569141 0.99555097 0.834836   0.99719038 0.71190246]\n",
+      "  [0.89082835 0.4312754  0.84383002 0.39536848 0.2648642 ]\n",
+      "  [0.14249626 0.33701881 0.67382261 0.12882944 0.19614096]]]\n",
+      "[[[1.65723327 1.74414039 1.50960483 1.90453122 1.84228592]\n",
+      "  [1.5317978  1.62920158 1.74419122 1.62047029 1.03966936]\n",
+      "  [1.60385547 1.75653812 1.50167664 1.82979795 1.00649453]]\n",
       "\n",
-      " [[1.56661524 1.02949106 1.11699283 1.81892342 1.71045186]\n",
-      "  [1.59727728 1.55471504 1.84102424 1.66215483 1.39429196]\n",
-      "  [1.73550306 1.56388317 1.35458813 1.05344871 1.22542744]]]\n"
+      " [[1.88569141 1.99555097 1.834836   1.99719038 1.71190246]\n",
+      "  [1.89082835 1.4312754  1.84383002 1.39536848 1.2648642 ]\n",
+      "  [1.14249626 1.33701881 1.67382261 1.12882944 1.19614096]]]\n"
      ]
     }
    ],
@@ -397,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,12 +424,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "are_they_eq= e.size == a.size\n"
+    "are_they_eq=e.size == a.size\n",
+    "print(are_they_eq)"
    ]
   },
   {
@@ -435,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
