--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -177,20 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.65723327 0.74414039 0.50960483 0.90453122 0.84228592]\n",
-      "  [0.5317978  0.62920158 0.74419122 0.62047029 0.03966936]\n",
-      "  [0.60385547 0.75653812 0.50167664 0.82979795 0.00649453]]\n",
+      "[[[0.08459405 0.27370996 0.54657602 0.20541507 0.9143678 ]\n",
+      "  [0.11152221 0.13790969 0.92458109 0.00634207 0.61229022]\n",
+      "  [0.88786188 0.43475017 0.46817788 0.71185155 0.93533494]]\n",
       "\n",
-      " [[0.88569141 0.99555097 0.834836   0.99719038 0.71190246]\n",
-      "  [0.89082835 0.4312754  0.84383002 0.39536848 0.2648642 ]\n",
-      "  [0.14249626 0.33701881 0.67382261 0.12882944 0.19614096]]]\n"
+      " [[0.71381026 0.51878515 0.66367732 0.39810667 0.98670435]\n",
+      "  [0.62993934 0.08191465 0.97249752 0.18310684 0.28994699]\n",
+      "  [0.02281294 0.41959161 0.16269573 0.89762578 0.24800368]]]\n"
      ]
     }
    ],
@@ -368,20 +368,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.65723327 0.74414039 0.50960483 0.90453122 0.84228592]\n",
-      "  [0.5317978  0.62920158 0.74419122 0.62047029 0.03966936]\n",
-      "  [0.60385547 0.75653812 0.50167664 0.82979795 0.00649453]]\n",
+      "[[[0.08459405 0.27370996 0.54657602 0.20541507 0.9143678 ]\n",
+      "  [0.11152221 0.13790969 0.92458109 0.00634207 0.61229022]\n",
+      "  [0.88786188 0.43475017 0.46817788 0.71185155 0.93533494]]\n",
       "\n",
-      " [[0.88569141 0.99555097 0.834836   0.99719038 0.71190246]\n",
-      "  [0.89082835 0.4312754  0.84383002 0.39536848 0.2648642 ]\n",
-      "  [0.14249626 0.33701881 0.67382261 0.12882944 0.19614096]]]\n",
-      "[[[1.65723327 1.74414039 1.50960483 1.90453122 1.84228592]\n",
-      "  [1.5317978  1.62920158 1.74419122 1.62047029 1.03966936]\n",
-      "  [1.60385547 1.75653812 1.50167664 1.82979795 1.00649453]]\n",
+      " [[0.71381026 0.51878515 0.66367732 0.39810667 0.98670435]\n",
+      "  [0.62993934 0.08191465 0.97249752 0.18310684 0.28994699]\n",
+      "  [0.02281294 0.41959161 0.16269573 0.89762578 0.24800368]]]\n",
+      "[[[1.08459405 1.27370996 1.54657602 1.20541507 1.9143678 ]\n",
+      "  [1.11152221 1.13790969 1.92458109 1.00634207 1.61229022]\n",
+      "  [1.88786188 1.43475017 1.46817788 1.71185155 1.93533494]]\n",
       "\n",
-      " [[1.88569141 1.99555097 1.834836   1.99719038 1.71190246]\n",
-      "  [1.89082835 1.4312754  1.84383002 1.39536848 1.2648642 ]\n",
-      "  [1.14249626 1.33701881 1.67382261 1.12882944 1.19614096]]]\n"
+      " [[1.71381026 1.51878515 1.66367732 1.39810667 1.98670435]\n",
+      "  [1.62993934 1.08191465 1.97249752 1.18310684 1.28994699]\n",
+      "  [1.02281294 1.41959161 1.16269573 1.89762578 1.24800368]]]\n"
      ]
     }
    ],
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,8 @@
    "source": [
     "### [your code here]\n",
     "are_they_eq=e.size == a.size\n",
-    "print(are_they_eq)"
+    "print(are_they_eq)\n",
+    "## yes, they both have the same size"
    ]
   },
   {
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,27 +553,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[1.28883863 1.65662772 1.39839219 1.79909239 1.17290952]\n",
-      "  [1.67344714 1.86714866 1.34189354 1.52162888 1.29716684]\n",
-      "  [1.59825453 1.80869038 1.18134915 1.92014898 1.46827587]]\n",
+      "[[[1.08459405 1.27370996 1.54657602 1.20541507 1.9143678 ]\n",
+      "  [1.11152221 1.13790969 1.92458109 1.00634207 1.61229022]\n",
+      "  [1.88786188 1.43475017 1.46817788 1.71185155 1.93533494]]\n",
       "\n",
-      " [[1.56661524 1.02949106 1.11699283 1.81892342 1.71045186]\n",
-      "  [1.59727728 1.55471504 1.84102424 1.66215483 1.39429196]\n",
-      "  [1.73550306 1.56388317 1.35458813 1.05344871 1.22542744]]]\n",
-      "[[[ 25.  75.  25.  75.  25.]\n",
-      "  [ 75.  75.  25.  75.  25.]\n",
-      "  [ 75.  75.  25. 100.  25.]]\n",
+      " [[1.71381026 1.51878515 1.66367732 1.39810667 1.98670435]\n",
+      "  [1.62993934 1.08191465 1.97249752 1.18310684 1.28994699]\n",
+      "  [1.02281294 1.41959161 1.16269573 1.89762578 1.24800368]]]\n",
+      "[[[ 25.  25.  75.  25.  75.]\n",
+      "  [ 25.  25.  75.   0.  75.]\n",
+      "  [ 75.  25.  25.  75.  75.]]\n",
       "\n",
-      " [[ 75.   0.  25.  75.  75.]\n",
-      "  [ 75.  75.  75.  75.  25.]\n",
-      "  [ 75.  75.  25.  25.  25.]]]\n"
+      " [[ 75.  75.  75.  25. 100.]\n",
+      "  [ 75.  25.  75.  25.  25.]\n",
+      "  [ 25.  25.  25.  75.  25.]]]\n"
      ]
     }
    ],
