--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'numpy.version' from 'c:\\\\Users\\\\ASUS\\\\anaconda3\\\\Lib\\\\site-packages\\\\numpy\\\\version.py'>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "np.version"
    ]
   },
   {
@@ -51,11 +64,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here\\]\n",
+    "a= np.random.randint( 3,size=(2, 3, 5))\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -68,11 +85,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0 0 1 2 0]\n",
+      "  [1 2 1 2 1]\n",
+      "  [0 1 1 2 0]]\n",
+      "\n",
+      " [[1 1 2 0 2]\n",
+      "  [2 1 2 0 2]\n",
+      "  [1 2 2 2 0]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +117,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b=np.ones((5,2,3))\n",
+    "\n"
    ]
   },
   {
@@ -102,11 +136,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +175,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theer are have the same size\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "if a.size == b.size:\n",
+    "    print (\"theer are have the same size\")\n",
+    "else:\n",
+    "    print (\"theer not the same\")\n"
    ]
   },
   {
@@ -136,11 +204,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### [your code here]\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m a\u001b[38;5;241m+\u001b[39mb\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a+b\n",
+    "# becouse the number of colume in a not equel the number of row in c"
    ]
   },
   {
@@ -154,11 +236,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c= np.transpose(b,(1,2,0))\n",
+    "print(c)"
    ]
   },
   {
@@ -171,11 +269,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 2. 3. 1.]\n",
+      "  [2. 3. 2. 3. 2.]\n",
+      "  [1. 2. 2. 3. 1.]]\n",
+      "\n",
+      " [[2. 2. 3. 1. 3.]\n",
+      "  [3. 2. 3. 1. 3.]\n",
+      "  [2. 3. 3. 3. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d=a+c \n",
+    "# becouse they are have diffrent shepes\n",
+    "print(d)"
    ]
   },
   {
@@ -188,12 +303,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0 0 1 2 0]\n",
+      "  [1 2 1 2 1]\n",
+      "  [0 1 1 2 0]]\n",
+      "\n",
+      " [[1 1 2 0 2]\n",
+      "  [2 1 2 0 2]\n",
+      "  [1 2 2 2 0]]] [[[1. 1. 2. 3. 1.]\n",
+      "  [2. 3. 2. 3. 2.]\n",
+      "  [1. 2. 2. 3. 1.]]\n",
+      "\n",
+      " [[2. 2. 3. 1. 3.]\n",
+      "  [3. 2. 3. 1. 3.]\n",
+      "  [2. 3. 3. 3. 1.]]]\n",
+      "thay have the same shep and size\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print(a,d)\n",
+    "if a.size == d.size and a.shape == d.shape:\n",
+    "    print (\"thay have the same shep and size\")\n",
+    "elif a.size == d.size and a.shape:\n",
+    "     print (\"thay have the same size and diffrent shape\")\n",
+    "elif a.shape == d.shape:\n",
+    "     print (\"thay have the same shape and diffrent size\")\n",
+    "else:\n",
+    "   print (\"thay have diffrent shape and diffrent size\")   \n",
+    "     "
    ]
   },
   {
@@ -206,11 +351,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e=  c * a\n",
+    "print(c)"
    ]
   },
   {
@@ -224,12 +385,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "if e.size==a.size and  e.shape == a.shape:\n",
+    "    print(True)\n",
+    "else:\n",
+    "    print(False)\n"
    ]
   },
   {
@@ -243,12 +415,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0 \n",
+      " 1.0 \n",
+      " 2.1333333333333333\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "print(d_max, \"\\n\", d_min, \"\\n\", d_mean)\n"
    ]
   },
   {
@@ -261,11 +446,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f = np.empty(d.shape)\n"
    ]
   },
   {
@@ -287,11 +473,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f array:\n",
+      " [[[  0.   0.  25. 100.   0.]\n",
+      "  [ 25. 100.  25. 100.  25.]\n",
+      "  [  0.  25.  25. 100.   0.]]\n",
+      "\n",
+      " [[ 25.  25. 100.   0. 100.]\n",
+      "  [100.  25. 100.   0. 100.]\n",
+      "  [ 25. 100. 100. 100.   0.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "for i in range(d.shape[0]):\n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range(d.shape[2]):\n",
+    "            if d[i, j, k] == d_min:\n",
+    "                f[i, j, k] = 0\n",
+    "            elif d[i, j, k] == d_max:\n",
+    "                f[i, j, k] = 100\n",
+    "            elif d_min < d[i, j, k] < d_mean:\n",
+    "                f[i, j, k] = 25\n",
+    "            elif d_mean < d[i, j, k] < d_max:\n",
+    "                f[i, j, k] = 75\n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                f[i, j, k] = 50\n",
+    "print(\"f array:\\n\", f)"
    ]
   },
   {
@@ -325,11 +541,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m f \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Populate `f` based on conditions\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m value \u001b[38;5;129;01min\u001b[39;00m d:\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m value \u001b[38;5;241m==\u001b[39m d_min:\n\u001b[0;32m      7\u001b[0m         f\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'd' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n"
    ]
   },
   {
@@ -350,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +589,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
